Fix hidden sidebar toggle open button by removing header visibility hidden

--- a/assets/style.css
+++ b/assets/style.css
@@ -49,6 +49,9 @@ footer {
 }
 
 header {
+    background: transparent !important;
+}
+header [data-testid="stToolbar"] {
     visibility: hidden;
 }
 
